1-whoami/whoami.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
spec:
  selector:
    name: whoami
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
